--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
@@ -18,6 +19,7 @@
     "@types/node": "^10.1.2",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^2.8.3"
   }
 }
